# SAPR

./: CMakeLists.txt  README.md  main.cpp
resources/: resources.qrc
src/: app.cpp  app.h  bouncingtext.cpp  bouncingtext.h  doubledelegate.cpp  doubledelegate.h  mainwindow.cpp  mainwindow.h  modelmanager.cpp  modelmanager.h  movablelineitem.cpp  movablelineitem.h  movablelineview.cpp  movablelineview.h  nodemodel.cpp  nodemodel.h  numericdelegate.cpp  numericdelegate.h  positivedoubledelegate.cpp  positivedoubledelegate.h  positivenumericdelegate.cpp  positivenumericdelegate.h  postprocessor.cpp  postprocessor.h  preprocessor.cpp  preprocessor.h  processor.cpp  processor.h  rotatingpixmapitem.cpp  rotatingpixmapitem.h  scalablegraphicsview.cpp  scalablegraphicsview.h  scenedrawer.cpp  scenedrawer.h  scenemanager.cpp  scenemanager.h  settingsdialog.cpp  settingsdialog.h  sizetablemodel.cpp  sizetablemodel.h
